# aurora-cli-rs

./: .catalog-info.yaml  .gitignore  .gitmodules  Cargo.toml  README.md  default-config.json  rust-toolchain
.github/workflows/: cli.yml  rust.yml  security.yml
cli/: Cargo.toml
cli/src/: config.rs  eth_method.rs  lib.rs  main.rs
cli/src/cli/: mod.rs
cli/src/cli/advanced/: aurora.rs  config.rs  erc20.rs  mod.rs  near.rs  process_tx_data.rs  solidity.rs
cli/src/cli/simple/: mod.rs
cli/src/cli/simple/command/: mod.rs  silo.rs
cli/src/client/: aurora.rs  mod.rs  near.rs
cli/src/transaction_reader/: aggregator.rs  filter.rs  mod.rs
cli/src/utils/: abi.rs  ft_metadata.rs  mod.rs
docs/: localnet.md
docs/res/: Counter.abi  Counter.hex  HelloWorld.abi  HelloWorld.hex  aurora-mainnet-silo.wasm  batch_list.json  ft_metadata.json
newcli/: Cargo.toml
newcli/src/: cli.rs  context.rs  main.rs
newcli/src/command/: handlers.rs  mod.rs  near.rs
newcli/src/common/: mod.rs  output.rs
scripts/: advanced.sh  different-outputs.sh  simple-ledger.sh  simple-silo.sh  simple.sh  tests-coverage.sh
sdk/: Cargo.toml
sdk/examples/: client.rs
sdk/macros/: Cargo.toml  README.md
sdk/macros/src/: lib.rs
sdk/src/: lib.rs  read.rs  utils.rs
sdk/src/aurora/: abi.rs  client.rs  common.rs  contract.rs  error.rs  mod.rs  operations.rs
sdk/src/aurora/contract/: mod.rs  read.rs  test_macro.rs  write.rs
sdk/src/aurora/tests/: mod.rs  mod_tests.rs  parse_errors.rs
sdk/src/client/: broadcast.rs  builder.rs  mod.rs  response.rs
sdk/src/near/: builder.rs  client.rs  error.rs  mod.rs  operations.rs  query.rs  rpc_client.rs  types.rs  workspace.rs
sdk/tests/: aurora_client.rs  integration.rs  mod.rs
sdk/tests/helpers/: mod.rs
src/: cli.rs  client.rs  config.rs  eth_method.rs  lib.rs  main.rs  transaction_reader.rs  utils.rs
src/cli/: aurora.rs  borsh_io.rs  erc20.rs  mod.rs  near.rs  pausables.rs  process_tx_data.rs  solidity.rs
src/cli/advanced/: aurora.rs  erc20.rs  mod.rs  near.rs  solidity.rs
src/cli/simple/: command.rs  mod.rs
src/cli/simple/command/: mod.rs  silo.rs
src/client/: aurora.rs  mod.rs  near.rs
src/transaction_reader/: aggregator.rs  filter.rs  mod.rs
src/utils/: abi.rs  ft_metadata.rs  mod.rs
tests/: advanced_tests.rs  simple_silo_tests.rs  simple_tests.rs
tests/common/: mod.rs
wasm/: aurora-mainnet.wasm
