[workspace]
resolver = "2"
members = [
    "cli",
    "sdk"
]

[workspace.dependencies]
aurora-engine-precompiles = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.7.0", features = ["std"] }
aurora-engine-sdk = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.7.0", features = ["std"] }
aurora-engine-transactions = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.7.0", features = ["std"] }
aurora-engine-types = { git = "https://github.com/aurora-is-near/aurora-engine.git", tag = "3.7.0", features = ["std", "impl-serde"] }

anyhow = "1"
async-trait = "0.1"
borsh = "1"
hex = "0.4"
near-chain-configs = "0.28"
near-crypto = "0.28"
near-jsonrpc-client = "0.15"
near-jsonrpc-primitives = "0.28"
near-token = { version = "0.3", features = ["borsh", "serde"] }
near-primitives = "0.28"
primitive-types = "0.13"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"
