[workspace]
resolver = "2"
members = [
    "cli",
    "sdk"
]

[workspace.dependencies]
anyhow = "1"
aurora-engine-precompiles = { version = "1", features = ["std"] }
aurora-engine-sdk = { version = "1", features = ["std"] }
aurora-engine-transactions = { version = "1", features = ["std"] }
aurora-engine-types = { version = "1", features = ["std", "impl-serde"] }
borsh = "1"
bs58 = "0.5"
libsecp256k1 = { version = "0.7", features = ["std"] }
near-chain-configs = "0.29"
near-crypto = "0.29"
near-token = { version = "0.3", features = ["borsh", "serde"] }
near-jsonrpc-client = "0.16"
near-jsonrpc-primitives = "0.29"
near-primitives = "0.29"
near-workspaces = "0.18"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
