[package]
name = "aurora-cli-rs"
description = "Aurora CLI is a command line interface to bootstrap Aurora Engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "aurora_cli"
path = "src/lib.rs"

[[bin]]
name = "aurora-cli"
path = "src/main.rs"

[features]
default = ["simple"]
simple = ["toml"]
advanced = ["near-chain-configs"]

[dependencies]
anyhow.workspace = true
aurora-engine-precompiles.workspace = true
aurora-engine-sdk.workspace = true
aurora-engine-transactions.workspace = true
aurora-engine-types.workspace = true
borsh.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["derive"] }
ethabi.workspace = true
hex.workspace = true
libsecp256k1 = { workspace = true, features = ["std"] }
near-chain-configs = { workspace = true, optional = true }
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
reqwest.workspace = true
rand.workspace = true
rlp.workspace = true
serde.workspace = true
serde_json.workspace = true
shadow-rs.workspace = true
toml = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[build-dependencies]
shadow-rs.workspace = true
