[package]
name = "newcli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
aurora-sdk-rs = { path = "../sdk", features = ["cli"] }
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
libsecp256k1 = { workspace = true, features = ["std"] }
rlp.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true