[package]
name = "aurora-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
near-crypto.workspace = true
borsh.workspace = true
near-token.workspace = true
near-primitives.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-workspaces.workspace = true
