[package]
name = "aurora-sdk-rs"
description = "Aurora SDK that used in Aurora CLI"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
aurora-engine-sdk = { workspace = true, features = ["std"] }
aurora-engine-types = { workspace = true, features = ["std", "impl-serde"] }
aurora-engine-transactions.workspace = true
ethabi.workspace = true
libsecp256k1 = { workspace = true, features = ["std"] }
near-crypto.workspace = true
borsh.workspace = true
near-gas.workspace = true
near-token.workspace = true
near-primitives.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage"] }
rand.workspace = true
rlp.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
regex.workspace = true
thiserror.workspace = true
hex.workspace = true
aurora-sdk-macros = { path = "macros" }

[dev-dependencies]
near-contract-standards.workspace = true
near-workspaces.workspace = true
